--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ description: "……"
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: # #https://github.com/lemonchann/images/raw/master/gzh/公众号二维码.png
+avatar: https://github.com/lemonchann/images/raw/master/gzh/公众号二维码.png
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon:# https://github.com/lemonchann/lemonchann.github.io/raw/master/images/favicon.ico
+favicon:  https://github.com/lemonchann/lemonchann.github.io/raw/master/images/favicon.ico
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
@@ -37,22 +37,22 @@ excerpt_separator: <!-- more -->
 # Includes an icon in the footer for each username you enter
 footer-links:
   #weibo: frommidworld #请输入你的微博个性域名 https://www.weibo.com/<thispart>
-  behance: # https://www.behance.net/<username>
-  dribbble:
-  zhihu: #ning-meng-cheng-31-94
-  email: #lemonchann@foxmail.com
-  facebook:
-  flickr:
-  github: #lemonchann 
-  googleplus: # anything in your profile username that comes after plus.google.com/
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  tumblr: # https://<username>.tumblr.com
+  #behance:  https://www.behance.net/<username>
+  #dribbble:
+   #zhihu: #ning-meng-cheng-31-94
+   #email: #lemonchann@foxmail.com
+   #facebook:
+   #flickr:
+   #github: #lemonchann 
+   #googleplus: # anything in your profile username that comes after plus.google.com/
+   #instagram:
+   #linkedin:
+  # pinterest:
+  # rss: # just type anything here for a working RSS icon
+   #stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+   #tumblr: # https://<username>.tumblr.com
   #twitter: frommidworld
-  youtube:
+   #youtube:
 
 # Text under the icons in footer
 footer-text: Copyright (c) 2022 crazyhan
@@ -62,18 +62,18 @@ footer-text: Copyright (c) 2022 crazyhan
 disqus: # fromendworld
 
 # Gitalk
-gitalk:
-  clientID: #bd65d5c0df878155b7fa
-  clientSecret: #d0220762c05c2d6b6f6152a0f0e4b6b090de9729
-  repo: #lemonchann.github.io
-  owner: #lemonchann
+  #gitalk:
+  #clientID: #bd65d5c0df878155b7fa
+  #clientSecret: #d0220762c05c2d6b6f6152a0f0e4b6b090de9729
+  #repo: hanlinniao.github.io
+  #owner: #lemonchann
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 #google_analytics: 
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: #https://lemonchann.github.io
+url: https://lemonchann.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -116,6 +116,6 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - LICENSE
-  - README.md
+  #- README.md
   - CNAME
 
