--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ description: "……"
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/hanlinniao/hanlinniao.github.io/master/images/bear.jpg
+avatar:   https://raw.staticdn.net/hanlinniao/hanlinniao.github.io/master/images/bear.jpg
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon:  https://github.com/lemonchann/lemonchann.github.io/raw/master/images/favicon.ico
+favicon:  https://raw.staticdn.net/hanlinniao/hanlinniao.github.io/master/images/%E9%B8%9F01.jpg
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
