--- a/_config.yml
+++ b/_config.yml
@@ -55,18 +55,18 @@ footer-links:
    #youtube:
 
 # Text under the icons in footer
-footer-text: Copyright (c) 2022 crazyhan
+footer-text: Copyright (c) 2022-2023 crazyhan
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: # fromendworld
 
 # Gitalk
-  #gitalk:
-  #clientID: #bd65d5c0df878155b7fa
-  #clientSecret: #d0220762c05c2d6b6f6152a0f0e4b6b090de9729
-  #repo: hanlinniao.github.io
-  #owner: #lemonchann
+  gitalk:
+  clientID: 7dae99cd8841d2bb49b
+  clientSecret: cb7ca74eb4ba3fb89f5a724066bd5bcdd36869e1
+  repo: hanlinniao.github.io
+  owner: crazyhan
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 #google_analytics: 
