--- a/_config.yml
+++ b/_config.yml
@@ -59,10 +59,10 @@ footer-text: Copyright (c) 2022-2023 crazyhan
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: # fromendworld
+#disqus: # fromendworld
 
 # Gitalk
-  gitalk:
+gitalk:
   clientID: 7dae99cd8841d2bb49b
   clientSecret: cb7ca74eb4ba3fb89f5a724066bd5bcdd36869e1
   repo: hanlinniao.github.io
