--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ navigation:
     url: /archive
   - name: 标签
     url: /tags
+  - name: 留言
+    url: https://vercel.crazyhan.tk/
 
 # Pagination
 paginate: 15
