--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "crazyhan的牙齿治疗舱"
 # Short bio or description (displayed in the header)
-description: "古怪而又年轻的“老头”，因为牙龈发炎萎缩造成有时候牙齿异感，又想抄写别人博客的太空风命名，博客站名称变成了这样。"
+description: "古怪而又年轻的“老头”，牙龈发炎萎缩造成有时候牙齿异感，又想抄别人的太空风命名。"
 
 #
 # Flags below are optional
